[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pystrands"
version = "0.1.0"
authors = [
  { name="Diwakar", email="diwakarrankawat@gmail.com" }
]
description = "A lightweight, framework-agnostic real-time library."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []