[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pystrands"
version = "1.0.0"
description = "A lightweight, framework-agnostic real-time library for Python applications."
readme = "README.md"
authors = [
    {name = "Diwakar", email = "diwakarrankawat@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent"
]
keywords = ["websocket", "realtime", "tcp", "server", "client", "messaging"]

[project.urls]
Homepage = "https://github.com/pystrands/pystrands"
Documentation = "https://github.com/pystrands/pystrands#readme"
"Bug Tracker" = "https://github.com/pystrands/pystrands/issues"